pdfs added and pages added

--- a/endownentplans.html
+++ b/endownentplans.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div
         class="box"
-        onclick="openModal('images/Endownment Plans/Dhan Vriddhi.jpg', 'DHAN VRIDDHI')"
+        onclick="openPDF('pdf/DHANVRIDDHI.pdf', 'images/Endownment Plans/Dhan Vriddhi.jpg', 'DHAN VRIDDHI')"
       >
         <img
           src="images/Endownment Plans/Dhan Vriddhi.jpg"
@@ -22,7 +22,7 @@
       </div>
       <div
         class="box"
-        onclick="openModal('images/Endownment Plans/Jeevan Labh_page-0001.jpg', 'JEEVAN LABH')"
+        onclick="openPDF('pdf/LIC_Jeevan-Labh.pdf', 'images/Endownment Plans/Dhan Vriddhi.jpg', 'DHAN VRIDDHI')"
       >
         <img
           src="images/Endownment Plans/Jeevan Labh_page-0001.jpg"
@@ -32,7 +32,7 @@
       </div>
       <div
         class="box"
-        onclick="openModal('images/Endownment Plans/jeevan lakshya_page-0001.jpg', 'JEEVAN LAKSHYA')"
+        onclick="openPDF('pdf/Jeevan-Lakshya.pdf', 'images/Endownment Plans/Dhan Vriddhi.jpg', 'DHAN VRIDDHI')"
       >
         <img
           src="images/Endownment Plans/jeevan lakshya_page-0001.jpg"
@@ -50,6 +50,6 @@
       </div>
     </div>
 
-    <script src="script/endownment.js"></script>
+    <script src="script/planscript.js"></script>
   </body>
 </html>
