--- a/insuranceplans.html
+++ b/insuranceplans.html
@@ -4,18 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/insuranceplans.css" />
-    <title>LIC Policies</title>
+    <title>INSURANCE PLANS</title>
   </head>
   <body>
     <div class="container">
-      <h1>LIC POLICIES</h1>
+      <h1>INSURANCE PLANS</h1>
       <div class="card" onclick="window.location.href='endownentplans.html'">
         <img src="images/LIC-Logo.jpg" alt="Plan 1" />
         <p>ENDOWNENT PLANS</p>
       </div>
-      <div class="card" onclick="window.location.href='endownentplans.html'">
+      <div class="card" onclick="window.location.href='wholelifeplans.html'">
         <img src="images/LIC-Logo.jpg" alt="Plan 1" />
         <p>WHOLE LIFE PLANS</p>
+      </div>
+      <div class="card" onclick="window.location.href='moneybackplans.html'">
+        <img src="images/LIC-Logo.jpg" alt="Plan 1" />
+        <p>MONEY BACK PLANS</p>
       </div>
 
       <!-- Add more cards as needed -->
