--- a/wholelifeplans.html
+++ b/wholelifeplans.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div
         class="box"
-        onclick="openModal('images/Whole Life Plans/JEEVAN UMANG.jpg', 'JEEVAN UMANG')"
+        onclick="openPDF('pdf/Jeevan_Umang.pdf', 'images/Endownment Plans/Dhan Vriddhi.jpg', 'DHAN VRIDDHI')"
       >
         <img
           src="images/Whole Life Plans/JEEVAN UMANG.jpg"
@@ -22,7 +22,7 @@
       </div>
       <div
         class="box"
-        onclick="openModal('images/Endownment Plans/Jeevan Labh_page-0001.jpg', 'JEEVAN LABH')"
+        onclick="openPDF('pdf/Jeevan-Labh.pdf', 'images/Endownment Plans/Dhan Vriddhi.jpg', 'DHAN VRIDDHI')"
       >
         <img
           src="images/Endownment Plans/Jeevan Labh_page-0001.jpg"
@@ -40,6 +40,6 @@
       </div>
     </div>
 
-    <script src="script/endownment.js"></script>
+    <script src="script/planscript.js"></script>
   </body>
 </html>
