contact information was updated and lic completed

--- a/endownentplans.html
+++ b/endownentplans.html
@@ -10,10 +10,7 @@
     <h1>Endownment Plans</h1>
 
     <div class="container">
-      <div
-        class="box"
-        onclick="openPDF('pdf/DHANVRIDDHI.pdf', 'images/Endownment Plans/Dhan Vriddhi.jpg', 'DHAN VRIDDHI')"
-      >
+      <div class="box" onclick="openPDF('pdf/DHANVRIDDHI.pdf', 'DHAN VRIDDHI')">
         <img
           src="images/Endownment Plans/Dhan Vriddhi.jpg"
           alt="Insurance Plan 1"
@@ -22,7 +19,7 @@
       </div>
       <div
         class="box"
-        onclick="openPDF('pdf/LIC_Jeevan-Labh.pdf', 'images/Endownment Plans/Dhan Vriddhi.jpg', 'DHAN VRIDDHI')"
+        onclick="openPDF('pdf/LIC_Jeevan-Labh.pdf', 'DHAN VRIDDHI')"
       >
         <img
           src="images/Endownment Plans/Jeevan Labh_page-0001.jpg"
@@ -32,7 +29,7 @@
       </div>
       <div
         class="box"
-        onclick="openPDF('pdf/Jeevan-Lakshya.pdf', 'images/Endownment Plans/Dhan Vriddhi.jpg', 'DHAN VRIDDHI')"
+        onclick="openPDF('pdf/Jeevan-Lakshya.pdf', 'DHAN VRIDDHI')"
       >
         <img
           src="images/Endownment Plans/jeevan lakshya_page-0001.jpg"
