--- a/insuranceplans.html
+++ b/insuranceplans.html
@@ -21,6 +21,14 @@
         <img src="images/LIC-Logo.jpg" alt="Plan 1" />
         <p>MONEY BACK PLANS</p>
       </div>
+      <div class="card" onclick="window.location.href='termassurance.html'">
+        <img src="images/LIC-Logo.jpg" alt="Plan 1" />
+        <p>TERM ASSURANCE PLANS</p>
+      </div>
+      <div class="card" onclick="window.location.href='riders.html'">
+        <img src="images/LIC-Logo.jpg" alt="Plan 1" />
+        <p>RIDERS PLANS</p>
+      </div>
 
       <!-- Add more cards as needed -->
     </div>
