--- a/lic.html
+++ b/lic.html
@@ -13,15 +13,15 @@
         <img src="images/LIC-Logo.jpg" alt="Plan 1" />
         <p>Insurance Plans</p>
       </div>
-      <div class="card" onclick="window.location.href='plan2.html'">
+      <div class="card" onclick="window.location.href='pensionplans.html'">
         <img src="images/LIC-Logo.jpg" alt="Plan 2" />
         <p>Pension Plans</p>
       </div>
-      <div class="card" onclick="window.location.href='plan2.html'">
+      <div class="card" onclick="window.location.href='unitlinkedplans.html'">
         <img src="images/LIC-Logo.jpg" alt="Plan 2" />
         <p>Unit Linked PLans</p>
       </div>
-      <div class="card" onclick="window.location.href='plan2.html'">
+      <div class="card" onclick="window.location.href='healthplans.html'">
         <img src="images/LIC-Logo.jpg" alt="Plan 2" />
         <p>Health Plans</p>
       </div>
