--- a/moneybackplans.html
+++ b/moneybackplans.html
@@ -10,10 +10,7 @@
     <h1>Money Back Plans</h1>
 
     <div class="container">
-      <div
-        class="box"
-        onclick="openPDF('pdf/Bima_Shree.pdf', 'images/Endownment Plans/Dhan Vriddhi.jpg', 'DHAN VRIDDHI')"
-      >
+      <div class="box" onclick="openPDF('pdf/Bima_Shree.pdf', 'BIMA SHREE')">
         <img
           src="images/Money Back Plans/bhimashree_page-0001.jpg"
           alt="Insurance Plan 1"
@@ -22,7 +19,7 @@
       </div>
       <div
         class="box"
-        onclick="openPDF('pdf/New-Childrens-Money-Back.pdf', 'images/Endownment Plans/Dhan Vriddhi.jpg', 'DHAN VRIDDHI')"
+        onclick="openPDF('pdf/New-Childrens-Money-Back.pdf', 'NEW CHILDRENS MONEY BACK')"
       >
         <img
           src="images/Money Back Plans/childrensmoeyback_page-0001.jpg"
@@ -32,7 +29,7 @@
       </div>
       <div
         class="box"
-        onclick="openPDF('pdf/JeevanShiromani.pdf', 'images/Endownment Plans/Dhan Vriddhi.jpg', 'DHAN VRIDDHI')"
+        onclick="openPDF('pdf/JeevanShiromani.pdf','JEEVAN SHIROMANI')"
       >
         <img
           src="images/Money Back Plans/jeevanshiromani_page-0001.jpg"
@@ -40,10 +37,7 @@
         />
         <p>JEEVAN SHIROMANI</p>
       </div>
-      <div
-        class="box"
-        onclick="openPDF('pdf/JeevanTarun.pdf', 'images/Endownment Plans/Dhan Vriddhi.jpg', 'DHAN VRIDDHI')"
-      >
+      <div class="box" onclick="openPDF('pdf/JeevanTarun.pdf', 'JEEVAN TARUN')">
         <img
           src="images/Money Back Plans/jeevantarun_page-0001.jpg"
           alt="Insurance Plan 3"
