--- a/wholelifeplans.html
+++ b/wholelifeplans.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div
         class="box"
-        onclick="openPDF('pdf/Jeevan_Umang.pdf', 'images/Endownment Plans/Dhan Vriddhi.jpg', 'DHAN VRIDDHI')"
+        onclick="openPDF('pdf/Jeevan_Umang.pdf', 'JEEVAN UMANG')"
       >
         <img
           src="images/Whole Life Plans/JEEVAN UMANG.jpg"
@@ -20,10 +20,7 @@
         />
         <p>JEEVAN UMANG</p>
       </div>
-      <div
-        class="box"
-        onclick="openPDF('pdf/Jeevan-Labh.pdf', 'images/Endownment Plans/Dhan Vriddhi.jpg', 'DHAN VRIDDHI')"
-      >
+      <div class="box" onclick="openPDF('pdf/Jeevan-Labh.pdf', 'JEEVAN LABH')">
         <img
           src="images/Endownment Plans/Jeevan Labh_page-0001.jpg"
           alt="Insurance Plan 2"
