--- a/index.html
+++ b/index.html
@@ -252,26 +252,27 @@
         
         </div>
 
-        <!-- Map Section -->
-        <div class="col-md-6">
-          <h3>LOCATION</h3>
-          <div
-            id="map"
-            style="height: 300px; background-color: #ddd; margin-top: 20px"
-          >
-          <a href="https://maps.app.goo.gl/cv2RtQfsmkN6ZQr67" target="_blank" rel="noopener noreferrer">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15762.061101830519!2d76.9269025!3d9.0166701!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b06774f524526e5%3A0x5ed6c1acc68350c3!2sLIC%20Premium%20Point%20Punalur!5e0!3m2!1sen!2sin!4v1703753508105!5m2!1sen!2sin"
-              width="100%"
-              height="100%"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            >
-            </iframe>
-            </a>
-          </div>
+            <!-- map new section -->
+            <div class="newmap-box">
+              <div class="map-container">
+                  <h3>LOCATION</h3>
+                <div class="map">
+                  <a href="https://maps.app.goo.gl/cv2RtQfsmkN6ZQr67" target="_blank" rel="noopener noreferrer">
+                    <iframe
+                      src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15762.061101830519!2d76.9269025!3d9.0166701!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b06774f524526e5%3A0x5ed6c1acc68350c3!2sLIC%20Premium%20Point%20Punalur!5e0!3m2!1sen!2sin!4v1703753508105!5m2!1sen!2sin"
+                      width="100%"
+                      height="100%"
+                      style="border: 0; border-radius: 10px;"
+                      allowfullscreen=""
+                      loading="lazy"
+                      referrerpolicy="no-referrer-when-downgrade"
+                    ></iframe>
+                  </a>
+                </div>
+              </div>
+            </div>  
+             <!-- end of map new section -->
+
         </div>
       </div>
     </div>
