--- a/index.html
+++ b/index.html
@@ -59,19 +59,20 @@
     </nav>
 
     <!-- Hero Section -->
-    <header class="hero">
+    <header class="hero hero-image" style="background-image: url(images/header-bg.jpg);">
       <div class="container">
-        <h1>LIC PREMIUM POINT</h1>
-         <p>LIC |  LIC HFL  |   STAR HEALTH INSURANCE</p>
-         <div class="logos">
-          <img class="logo" src="images/LIC-Logo.png" alt="LIC"> <!--  LIC LOGO -->
-          <img class="logo" src="images/lic hfl.png" alt="LIC HFL"> <!--  LIC HFL LOGO -->
-          <img class="logo" src="images/starhealth_white.png" alt="STAR HEALTH INSURANCE"> <!--  STAR HEALTH LOGO -->
-          <!-- Add more logos as needed -->
-      </div>
-        <a href="#Contact" class="btn btn-primary">Get a Quote</a>
+        <div class="hero-content">
+          <h1>LIC PREMIUM POINT</h1>
+          <div class="logos">
+            <img class="logo" src="images/LIC-Logo.png" alt="LIC">
+            <img class="logo" src="images/lic hfl.png" alt="LIC HFL">
+            <img class="logo" src="images/starhealth.png" alt="STAR HEALTH INSURANCE">
+          </div>
+          <a href="#contact" class="btn btn-primary">Get a Quote</a>
+        </div>
       </div>
     </header>
+    
 
     <!-- About Section -->
     <section id="about" class="py-5">
@@ -204,7 +205,7 @@
             <a href="your_destination_url.html" class="card-link">
               <div class="card">
                 <div class="card-body text-center">
-                  <img src="images/starhealth_white.png" alt="Logo" class="servlogostar">
+                  <img src="images\starhealth.png" alt="Logo" class="servlogostar">
                   <h5 class="card-title"></h5>
                   <p class="card-text"></p>
                 </div>
